# bilitool

./: .gitignore  404.html  JS实现b站动态抽奖“公平”方案—动态_转发_b站抽奖过滤机制.txt  README.md  biliNFT+.py  biliNFT.py  bilidress.py  go.mod  go.sum  index.html  room.go  smartDelete(24).txt  smartDraw_1.0(21).txt  smartDraw_1.3.2(26).txt
.github/workflows/: BILI_judgement.yml  BLTH-server.yml  BLTH.yml  BiliExper.yml  BiliRoaming.yml  Bilibili-Live-API.yml  Bilibili-Toolkit.yml  HarukaBot.yml  Henryhaohao_Bilibili_video_download.yml  InJeCTrL_BiliCLOnline.yml  InJeCTrL_BiliCommentLottery.yml  JunzhouLiu.yml  LeoChen98_BiliRaffle.yml  MoyuScript_bilibili-api.yml  Nemo2011_bilibili-api.yml  RayWangQvQ.yml  SigureMo_bilili.yml  XiaoMiku01_bili-fans-medal-box.yml  XiaoMiku01_bilibili-live-m3u8.yml  XiaoMiku01_biliup-go.yml  XiaoMiku01_fansMedalHelper.yml  api.yml  (+16 more)
Changelog/: index.html
Guide/: Cookie.html  ServerChan.html  index.html
LocalDocker/: index.html
QA/: index.html
TencentCloud/: index.html
ZhuangBanPaiXu/: garb_GUI.py
bili-utils/: Cargo.toml  LICENSE  README.md
bili-utils/src/: client.rs  client_builder.rs  header.rs  lib.rs  login.rs  main.rs  suit.rs  utils.rs
bili-utils/src/bili_resp/: confirm_order.rs  create_order.rs  mod.rs  pay_bp.rs  pay_channel_param.rs  pay_data.rs  pay_order.rs  pay_query.rs  suit_all.rs  suit_detail.rs
biliSuitTool/: 装扮.py
buy/: buy.py  cookie.json  cookie.py  login.py  main.py  value.py
cmd/: main.go
docs/: package.json  pnpm-lock.yaml
parse/: m3u8.go  parser.go
test/: room_test.go  time_test.go
tool/: http.go  util.go
(+5 files in other folders)
