[package]
name = "bili_suit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.13", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "cookies","brotli"] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
num_cpus = "1.13.1"
anyhow = "1.0.53"
serde_json = "1.0.78"
serde = "1.0.136"
qrcode = "0.12.0"
dialoguer = "0.9.0"
console = "0.15.0"
crossbeam-channel = "0.5.2"
crossbeam = "0.8.1"
serde_qs = "0.6.0"
url = "2.2.2"
lazy_static = "1.4.0"
chrono = "0.4.19"
rand = "0.8.4"
fancy-regex = "0.7.1"
[dependencies.uuid]
version = "1.0.0-alpha.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
